# rosalind_sample

./: README.md
mcp_tutorial/mcp_documentation/: main.py  pyproject.toml
sahur_claude/sahur/: .env.example  .gitignore  ARCHITECTURE.md  COMPONENT_TEMPLATE.md  CONVENTIONS.md  DEVELOPMENT.md  README.md  demo.sh  demo_manual.md  docker-compose.yml
sahur_claude/sahur/sahur-batch/: Dockerfile  README.md  pyproject.toml  requirements.txt
sahur_claude/sahur/sahur-batch/sahur_batch/: main.py
sahur_claude/sahur/sahur-batch/sahur_batch/database/: __init__.py  connection.py  models.py
sahur_claude/sahur/sahur-batch/sahur_batch/processor/: __init__.py  issue_processor.py
sahur_claude/sahur/sahur-batch/sahur_batch/utils/: __init__.py  mcp_client.py  websocket_client.py
sahur_claude/sahur/sahur-core/: README.md  pyproject.toml
sahur_claude/sahur/sahur-core/sahur_core/: __init__.py
sahur_claude/sahur/sahur-core/sahur_core/agents/: __init__.py  issue_agent.py
sahur_claude/sahur/sahur-core/sahur_core/context/: __init__.py  context_manager.py
sahur_claude/sahur/sahur-core/sahur_core/mcp_server/: __init__.py
sahur_claude/sahur/sahur-core/sahur_core/models/: __init__.py  issue.py
sahur_claude/sahur/sahur-core/sahur_core/utils/: __init__.py  mcp_client.py
sahur_claude/sahur/sahur-core/sahur_core/workflows/: __init__.py  analysis_workflow.py
sahur_claude/sahur/sahur-mcp/: Dockerfile  README.md  install_core.sh  pyproject.toml  requirements.txt
sahur_claude/sahur/sahur-mcp/sahur_mcp/: __init__.py  main.py
sahur_claude/sahur/sahur-mcp/sahur_mcp/proxy/: __init__.py  mcp_proxy.py
sahur_claude/sahur/sahur-mcp/sahur_mcp/servers/: __init__.py  cause_context_server.py  history_context_server.py
sahur_claude/sahur/sahur-server/: Dockerfile  README.md  pyproject.toml  requirements.txt
sahur_claude/sahur/sahur-server/sahur_server/: main.py
sahur_claude/sahur/sahur-server/sahur_server/api/: __init__.py  health.py  issues.py  slack.py
sahur_claude/sahur/sahur-server/sahur_server/database/: __init__.py  connection.py  models.py
sahur_claude/sahur/sahur-server/sahur_server/models/: __init__.py  api_models.py
sahur_claude/sahur/sahur-server/sahur_server/services/: __init__.py  issue_service.py
sahur_claude/sahur/sahur-server/sahur_server/websockets/: __init__.py  manager.py
sahur_claude/sahur/sahur-web/: Dockerfile  README.md  next.config.js  package.json
sahur_claude/sahur/sahur-web/src/pages/: _app.tsx  index.tsx  new-issue.tsx
sahur_claude/sahur/sahur-web/src/pages/issues/: [id].tsx  index.tsx
sahur_claude/sahur/sahur-web/src/types/: react-syntax-highlighter.d.ts
sahur_poc/: .gitignore  ARCHITECTURE.md  COMPONENT_TEMPLATE.md  CONVENTIONS.md  DEVELOPMENT.md  README.md  docker-compose.yml
sahur_poc/sahur/sahur-batch/: Dockerfile  __init__.py  agent_runner.py  main.py  pyproject.toml  requirements.txt
sahur_poc/sahur/sahur-batch/sahur_batch/: __init__.py  agent_runner.py  main.py
sahur_poc/sahur/sahur-core/: Dockerfile  __init__.py  langgraph_workflow.py  pyproject.toml  requirements.txt  test_llm.py
sahur_poc/sahur/sahur-core/sahur_core/: agent.py
sahur_poc/sahur/sahur-mcp/: Dockerfile  __init__.py  dummy_github.py  main.py  pyproject.toml  requirements.txt
sahur_poc/sahur/sahur-mcp/sahur_mcp/: __init__.py  dummy_github.py  main.py
sahur_poc/sahur/sahur-server/: Dockerfile  __init__.py  db.py  main.py  pyproject.toml  requirements.txt  websocket.py
sahur_poc/sahur/sahur-server/sahur_server/: __init__.py  db.py  main.py  websocket.py
sahur_poc/sahur/sahur-web/: Dockerfile  next.config.js  package-lock.json  package.json
sahur_poc/sahur/sahur-web/src/components/: CauseContext.tsx  ChatStream.tsx  HistoryContext.tsx
sahur_poc/sahur/sahur-web/src/pages/: index.tsx
sahur_poc/sahur/sahur-web/src/pages/issue/tracking/: [issueTrackingId].tsx
sahur_poc/sahur/sahur-web/src/styles/: globals.css
