[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahur-batch"
version = "0.1.0"
description = "SAHUR 이슈 처리 인스턴스"
authors = [
    {name = "SAHUR Team", email = "dev@sahur.ai"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0.0",
    "websockets",
    "httpx",
    "sahur-core @ file://../sahur-core"
]
